src/MiniJavaParser.java
// $ANTLR 3.4 MiniJava.g 2026-04-30 02:37:43

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class MiniJavaParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARRAY", "ASSIGN", "BLOCK", "CLASS", "CONDITION", "FOR", "ID", "IF", "INT", "METHOD", "PARAM", "PROGRAM", "RETURN", "VAR", "WHILE", "WS", "'!='", "'&&'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'/'", "';'", "'<'", "'<='", "'='", "'=='", "'>'", "'>='", "'['", "']'", "'boolean'", "'class'", "'else'", "'for'", "'if'", "'int'", "'public'", "'return'", "'while'", "'{'", "'||'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int ARRAY=4;
    public static final int ASSIGN=5;
    public static final int BLOCK=6;
    public static final int CLASS=7;
    public static final int CONDITION=8;
    public static final int FOR=9;
    public static final int ID=10;
    public static final int IF=11;
    public static final int INT=12;
    public static final int METHOD=13;
    public static final int PARAM=14;
    public static final int PROGRAM=15;
    public static final int RETURN=16;
    public static final int VAR=17;
    public static final int WHILE=18;
    public static final int WS=19;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public MiniJavaParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public MiniJavaParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return MiniJavaParser.tokenNames; }
    public String getGrammarFileName() { return "MiniJava.g"; }


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "program"
    // MiniJava.g:27:1: program : ( classDecl )+ EOF -> ^( PROGRAM ( classDecl )+ ) ;
    public final MiniJavaParser.program_return program() throws RecognitionException {
        MiniJavaParser.program_return retval = new MiniJavaParser.program_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token EOF2=null;
        MiniJavaParser.classDecl_return classDecl1 =null;


        Object EOF2_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_classDecl=new RewriteRuleSubtreeStream(adaptor,"rule classDecl");
        try {
            // MiniJava.g:28:5: ( ( classDecl )+ EOF -> ^( PROGRAM ( classDecl )+ ) )
            // MiniJava.g:28:7: ( classDecl )+ EOF
            {
            // MiniJava.g:28:7: ( classDecl )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==39||LA1_0==44) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // MiniJava.g:28:7: classDecl
            	    {
            	    pushFollow(FOLLOW_classDecl_in_program135);
            	    classDecl1=classDecl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_classDecl.add(classDecl1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_program138); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_EOF.add(EOF2);


            // AST REWRITE
            // elements: classDecl
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 29:7: -> ^( PROGRAM ( classDecl )+ )
            {
                // MiniJava.g:29:10: ^( PROGRAM ( classDecl )+ )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(PROGRAM, "PROGRAM")
                , root_1);

                if ( !(stream_classDecl.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_classDecl.hasNext() ) {
                    adaptor.addChild(root_1, stream_classDecl.nextTree());

                }
                stream_classDecl.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "program"


    public static class classDecl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "classDecl"
    // MiniJava.g:35:1: classDecl : ( 'public' )? 'class' ID '{' ( member )* '}' -> ^( CLASS ID ( member )* ) ;
    public final MiniJavaParser.classDecl_return classDecl() throws RecognitionException {
        MiniJavaParser.classDecl_return retval = new MiniJavaParser.classDecl_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal3=null;
        Token string_literal4=null;
        Token ID5=null;
        Token char_literal6=null;
        Token char_literal8=null;
        MiniJavaParser.member_return member7 =null;


        Object string_literal3_tree=null;
        Object string_literal4_tree=null;
        Object ID5_tree=null;
        Object char_literal6_tree=null;
        Object char_literal8_tree=null;
        RewriteRuleTokenStream stream_44=new RewriteRuleTokenStream(adaptor,"token 44");
        RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
        RewriteRuleTokenStream stream_49=new RewriteRuleTokenStream(adaptor,"token 49");
        RewriteRuleTokenStream stream_39=new RewriteRuleTokenStream(adaptor,"token 39");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_member=new RewriteRuleSubtreeStream(adaptor,"rule member");
        try {
            // MiniJava.g:36:5: ( ( 'public' )? 'class' ID '{' ( member )* '}' -> ^( CLASS ID ( member )* ) )
            // MiniJava.g:36:7: ( 'public' )? 'class' ID '{' ( member )* '}'
            {
            // MiniJava.g:36:7: ( 'public' )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==44) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // MiniJava.g:36:7: 'public'
                    {
                    string_literal3=(Token)match(input,44,FOLLOW_44_in_classDecl172); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_44.add(string_literal3);


                    }
                    break;

            }


            string_literal4=(Token)match(input,39,FOLLOW_39_in_classDecl175); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_39.add(string_literal4);


            ID5=(Token)match(input,ID,FOLLOW_ID_in_classDecl177); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID5);


            char_literal6=(Token)match(input,47,FOLLOW_47_in_classDecl179); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_47.add(char_literal6);


            // MiniJava.g:36:32: ( member )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==38||(LA3_0 >= 43 && LA3_0 <= 44)) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // MiniJava.g:36:32: member
            	    {
            	    pushFollow(FOLLOW_member_in_classDecl181);
            	    member7=member();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_member.add(member7.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            char_literal8=(Token)match(input,49,FOLLOW_49_in_classDecl184); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_49.add(char_literal8);


            // AST REWRITE
            // elements: ID, member
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 37:7: -> ^( CLASS ID ( member )* )
            {
                // MiniJava.g:37:10: ^( CLASS ID ( member )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(CLASS, "CLASS")
                , root_1);

                adaptor.addChild(root_1, 
                stream_ID.nextNode()
                );

                // MiniJava.g:37:21: ( member )*
                while ( stream_member.hasNext() ) {
                    adaptor.addChild(root_1, stream_member.nextTree());

                }
                stream_member.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "classDecl"


    public static class member_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "member"
    // MiniJava.g:40:1: member : ( varDecl | methodDecl );
    public final MiniJavaParser.member_return member() throws RecognitionException {
        MiniJavaParser.member_return retval = new MiniJavaParser.member_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        MiniJavaParser.varDecl_return varDecl9 =null;

        MiniJavaParser.methodDecl_return methodDecl10 =null;



        try {
            // MiniJava.g:41:5: ( varDecl | methodDecl )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==38||LA4_0==43) ) {
                alt4=1;
            }
            else if ( (LA4_0==44) ) {
                alt4=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }
            switch (alt4) {
                case 1 :
                    // MiniJava.g:41:7: varDecl
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_varDecl_in_member218);
                    varDecl9=varDecl();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, varDecl9.getTree());

                    }
                    break;
                case 2 :
                    // MiniJava.g:42:7: methodDecl
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_methodDecl_in_member226);
                    methodDecl10=methodDecl();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, methodDecl10.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "member"


    public static class varDecl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "varDecl"
    // MiniJava.g:48:1: varDecl : type ID ( '[' ']' )? ';' -> ^( VAR type ID ) ;
    public final MiniJavaParser.varDecl_return varDecl() throws RecognitionException {
        MiniJavaParser.varDecl_return retval = new MiniJavaParser.varDecl_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token ID12=null;
        Token char_literal13=null;
        Token char_literal14=null;
        Token char_literal15=null;
        MiniJavaParser.type_return type11 =null;


        Object ID12_tree=null;
        Object char_literal13_tree=null;
        Object char_literal14_tree=null;
        Object char_literal15_tree=null;
        RewriteRuleTokenStream stream_36=new RewriteRuleTokenStream(adaptor,"token 36");
        RewriteRuleTokenStream stream_37=new RewriteRuleTokenStream(adaptor,"token 37");
        RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // MiniJava.g:49:5: ( type ID ( '[' ']' )? ';' -> ^( VAR type ID ) )
            // MiniJava.g:49:7: type ID ( '[' ']' )? ';'
            {
            pushFollow(FOLLOW_type_in_varDecl245);
            type11=type();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_type.add(type11.getTree());

            ID12=(Token)match(input,ID,FOLLOW_ID_in_varDecl247); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID12);


            // MiniJava.g:49:15: ( '[' ']' )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==36) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // MiniJava.g:49:16: '[' ']'
                    {
                    char_literal13=(Token)match(input,36,FOLLOW_36_in_varDecl250); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_36.add(char_literal13);


                    char_literal14=(Token)match(input,37,FOLLOW_37_in_varDecl252); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_37.add(char_literal14);


                    }
                    break;

            }


            char_literal15=(Token)match(input,29,FOLLOW_29_in_varDecl256); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_29.add(char_literal15);


            // AST REWRITE
            // elements: ID, type
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 50:7: -> ^( VAR type ID )
            {
                // MiniJava.g:50:10: ^( VAR type ID )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(VAR, "VAR")
                , root_1);

                adaptor.addChild(root_1, stream_type.nextTree());

                adaptor.addChild(root_1, 
                stream_ID.nextNode()
                );

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "varDecl"


    public static class methodDecl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "methodDecl"
    // MiniJava.g:56:1: methodDecl : 'public' type ID '(' ( paramList )? ')' block -> ^( METHOD ID type ( paramList )? block ) ;
    public final MiniJavaParser.methodDecl_return methodDecl() throws RecognitionException {
        MiniJavaParser.methodDecl_return retval = new MiniJavaParser.methodDecl_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal16=null;
        Token ID18=null;
        Token char_literal19=null;
        Token char_literal21=null;
        MiniJavaParser.type_return type17 =null;

        MiniJavaParser.paramList_return paramList20 =null;

        MiniJavaParser.block_return block22 =null;


        Object string_literal16_tree=null;
        Object ID18_tree=null;
        Object char_literal19_tree=null;
        Object char_literal21_tree=null;
        RewriteRuleTokenStream stream_44=new RewriteRuleTokenStream(adaptor,"token 44");
        RewriteRuleTokenStream stream_22=new RewriteRuleTokenStream(adaptor,"token 22");
        RewriteRuleTokenStream stream_23=new RewriteRuleTokenStream(adaptor,"token 23");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_paramList=new RewriteRuleSubtreeStream(adaptor,"rule paramList");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // MiniJava.g:57:5: ( 'public' type ID '(' ( paramList )? ')' block -> ^( METHOD ID type ( paramList )? block ) )
            // MiniJava.g:57:7: 'public' type ID '(' ( paramList )? ')' block
            {
            string_literal16=(Token)match(input,44,FOLLOW_44_in_methodDecl291); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_44.add(string_literal16);


            pushFollow(FOLLOW_type_in_methodDecl293);
            type17=type();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_type.add(type17.getTree());

            ID18=(Token)match(input,ID,FOLLOW_ID_in_methodDecl295); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID18);


            char_literal19=(Token)match(input,22,FOLLOW_22_in_methodDecl297); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_22.add(char_literal19);


            // MiniJava.g:57:28: ( paramList )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==38||LA6_0==43) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // MiniJava.g:57:28: paramList
                    {
                    pushFollow(FOLLOW_paramList_in_methodDecl299);
                    paramList20=paramList();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_paramList.add(paramList20.getTree());

                    }
                    break;

            }


            char_literal21=(Token)match(input,23,FOLLOW_23_in_methodDecl302); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_23.add(char_literal21);


            pushFollow(FOLLOW_block_in_methodDecl304);
            block22=block();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_block.add(block22.getTree());

            // AST REWRITE
            // elements: ID, paramList, block, type
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 58:7: -> ^( METHOD ID type ( paramList )? block )
            {
                // MiniJava.g:58:10: ^( METHOD ID type ( paramList )? block )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(METHOD, "METHOD")
                , root_1);

                adaptor.addChild(root_1, 
                stream_ID.nextNode()
                );

                adaptor.addChild(root_1, stream_type.nextTree());

                // MiniJava.g:58:27: ( paramList )?
                if ( stream_paramList.hasNext() ) {
                    adaptor.addChild(root_1, stream_paramList.nextTree());

                }
                stream_paramList.reset();

                adaptor.addChild(root_1, stream_block.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "methodDecl"


    public static class paramList_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "paramList"
    // MiniJava.g:61:1: paramList : param ( ',' param )* ;
    public final MiniJavaParser.paramList_return paramList() throws RecognitionException {
        MiniJavaParser.paramList_return retval = new MiniJavaParser.paramList_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal24=null;
        MiniJavaParser.param_return param23 =null;

        MiniJavaParser.param_return param25 =null;


        Object char_literal24_tree=null;

        try {
            // MiniJava.g:62:5: ( param ( ',' param )* )
            // MiniJava.g:62:7: param ( ',' param )*
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_param_in_paramList342);
            param23=param();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, param23.getTree());

            // MiniJava.g:62:13: ( ',' param )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==26) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // MiniJava.g:62:14: ',' param
            	    {
            	    char_literal24=(Token)match(input,26,FOLLOW_26_in_paramList345); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    char_literal24_tree = 
            	    (Object)adaptor.create(char_literal24)
            	    ;
            	    adaptor.addChild(root_0, char_literal24_tree);
            	    }

            	    pushFollow(FOLLOW_param_in_paramList347);
            	    param25=param();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, param25.getTree());

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "paramList"


    public static class param_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "param"
    // MiniJava.g:65:1: param : type ID -> ^( PARAM type ID ) ;
    public final MiniJavaParser.param_return param() throws RecognitionException {
        MiniJavaParser.param_return retval = new MiniJavaParser.param_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token ID27=null;
        MiniJavaParser.type_return type26 =null;


        Object ID27_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // MiniJava.g:66:5: ( type ID -> ^( PARAM type ID ) )
            // MiniJava.g:66:7: type ID
            {
            pushFollow(FOLLOW_type_in_param366);
            type26=type();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_type.add(type26.getTree());

            ID27=(Token)match(input,ID,FOLLOW_ID_in_param368); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID27);


            // AST REWRITE
            // elements: ID, type
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 67:7: -> ^( PARAM type ID )
            {
                // MiniJava.g:67:10: ^( PARAM type ID )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(PARAM, "PARAM")
                , root_1);

                adaptor.addChild(root_1, stream_type.nextTree());

                adaptor.addChild(root_1, 
                stream_ID.nextNode()
                );

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "param"


    public static class block_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "block"
    // MiniJava.g:73:1: block : '{' ( statement )* '}' -> ^( BLOCK ( statement )* ) ;
    public final MiniJavaParser.block_return block() throws RecognitionException {
        MiniJavaParser.block_return retval = new MiniJavaParser.block_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal28=null;
        Token char_literal30=null;
        MiniJavaParser.statement_return statement29 =null;


        Object char_literal28_tree=null;
        Object char_literal30_tree=null;
        RewriteRuleTokenStream stream_47=new RewriteRuleTokenStream(adaptor,"token 47");
        RewriteRuleTokenStream stream_49=new RewriteRuleTokenStream(adaptor,"token 49");
        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        try {
            // MiniJava.g:74:5: ( '{' ( statement )* '}' -> ^( BLOCK ( statement )* ) )
            // MiniJava.g:74:7: '{' ( statement )* '}'
            {
            char_literal28=(Token)match(input,47,FOLLOW_47_in_block403); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_47.add(char_literal28);


            // MiniJava.g:74:11: ( statement )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==ID||LA8_0==38||(LA8_0 >= 41 && LA8_0 <= 43)||(LA8_0 >= 45 && LA8_0 <= 47)) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // MiniJava.g:74:11: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_block405);
            	    statement29=statement();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_statement.add(statement29.getTree());

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            char_literal30=(Token)match(input,49,FOLLOW_49_in_block408); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_49.add(char_literal30);


            // AST REWRITE
            // elements: statement
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
